--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class=header>
-        <h1 style="padding-top: 13px;">ADIDALMS LOGO</h1>
+        <h1 style="padding-top: 13px;"><img src="logo.png" /></h1>
     </div>
     
 
