--- a/courses.html
+++ b/courses.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>Courses</title>
-    <link href="style.css" rel=sytlesheet>
+    <link href="courseStyle.css" rel="sytlesheet" type="text/css">
 </head>
 
 <body>
-    <div class=header>
-        <h1><img src="logo.png" /></h1>
+   <div style="float:left; height: 150px; width: 100%; background-color: #909090;">
+        <h1 style="padding-top: 13px;"><img src="logooo.png" height="100" width="110"/></h1>
     </div>
     
     <ul>
