--- a/courses.html
+++ b/courses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Courses</title>
-    <link href="courseStyle.css" rel="sytlesheet" type="text/css">
+    <link href="style.css" rel="sytlesheet" type="text/css">
 </head>
 
 <body>
