--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+  <head>
     <meta charset="utf-8">
     <title>Sign In</title>
-    <link href="style.css" rel="sytlesheet" type="text/css">
-</head>
+    <link href="style.css" rel="stylesheet" type="text/css">
+  </head>
 
-<body>
-    <div style="float:left; height: 150px; width: 100%; background-color: #909090;">
-        <h1 style="padding-top: 13px; padding-left: 10px"><img src="logooo.png" height="100" width="110"/></h1>
+  <body>
+    <div id="fixedheader">
+      <img src="logooo.png" height="100" width="110"/>
     </div>
     
-	<section>
-		<form name="login" action="courses.html" method="get" accept-charset="utf-8">
-  			<ul style="list-style:none;">
-    			<li><label for="usermail">Username</label>
-   			 	<input type="text" id="username" name="username" placeholder="username" required></li>
-    			<li><label for="password">Password</label>
-    			<input type="password" id="password" name="password" placeholder="password" required></li>
-    			<li>
-    			<input id="buttonStyle" type="submit" value="Login"></li>
-  			</ul>
-		</form>
-	</section>
-    
-</body>
+  	<div id="loginform">
+      <section>
+		    <form name="login" action="courses.html" method="get" accept-charset="utf-8">
+          <ul style="list-style:none">
+            <li>
+              <label for="usermail">Username</label>
+   			 	    <input type="text" id="username" name="username" placeholder="username" required>
+            </li>
+            <li>
+              <label for="password">Pasasfgdfsword</label>
+              <input type="password" id="password" name="password" placeholder="password" required>
+            </li>
+            <li>
+              <input id="buttonStyle" type="submit" value="Login">
+            </li>
+          </ul>
+		    </form>
+      </section>
+    </div>
+  </body>
 </html>
