--- a/courses.html
+++ b/courses.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en-us">
+    <head>
+        <meta charset="utf-8">
+        <title>Courses</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
 
-<head>
-    <meta charset="utf-8">
-    <title>Courses</title>
-    <link href="style.css" rel="sytlesheet" type="text/css">
-</head>
-
-<body>
-   <div style="float:left; height: 150px; width: 100%; background-color: #909090;">
-        <h1 style="padding-top: 13px;"><img src="logooo.png" height="100" width="110"/></h1>
-    </div>
+    <body>
+        <div class="header">
+            <img src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+            <form class="signInForm" name="signIn" action="index.html" method="get" accept-charset="utf-8">
+                <input class="buttonSignStyle" type="submit" value="Sign In">
+            </form>
+        </div>
     
-    <ul>
-        <li>Class 1</li>
-        <li>Class 2</li>
-        <li>Class 3</li>
-        <li>Class 4</li>
-        <li>Class 5</li>
-    </ul>
- 
-    
-</body>
+        <ul>
+            <li>Class 1</li>
+            <li>Class 2</li>
+            <li>Class 3</li>
+            <li>Class 4</li>
+            <li>Class 5</li>
+        </ul>
+    </body>
 </html>
