--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   <body>
     <div class="header">
       <!-- ADIDALMS logo at top left -->
-      <img src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+      <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
     </div>
     
-  	<div id="loginform">
+  	<div id="loginFormIndex">
       <section>
 		    <form name="login" action="courses.html" method="get" accept-charset="utf-8">
           <ul>
             <li>
               <label for="usermail">Username</label>
-   			 	    <input type="text" id="username" name="username" placeholder="username" required>
+   			 	    <input type="text" name="username" placeholder="username" required>
             </li>
             <li>
               <label for="password">Password</label>
-              <input type="password" id="password" name="password" placeholder="password" required>
+              <input type="password" name="password" placeholder="password" required>
             </li>
             <li>
-              <input class="buttonStyle" type="submit" value="Login">
+              <input class="loginButtonIndex" type="submit" value="Login">
             </li>
           </ul>
 		    </form>
