--- a/class1.html
+++ b/class1.html
@@ -9,17 +9,15 @@
     <body>
         <div class="header">
             <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+
+            <form class="syllabusFormCourses" name="syllabus" action="tools/syllabus/class1Syllabus.html" method="get" accept-charset="utf-8">
+                <input class="syllabusLinkMany" type="submit" value="Syllabus">
+            </form>
+
             <form class="profileFormCourses" name="signIn" action="index.html" method="get" accept-charset="utf-8">
                 <input class="profileButtonCourses" type="submit" value="Profile">
             </form>
         </div>
     
-        <ul>
-            <li><a class="classLinksCourses" href="class1.html">Software Engineering</a></li>
-            <li>Class 2</li>
-            <li>Class 3</li>
-            <li>Class 4</li>
-            <li>Class 5</li>
-        </ul>
     </body>
 </html>
