--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   </head>
 
   <body>
+    <!-- scripting for username and password validation -->
+    <script type="text/javascript">
+        function validate()
+        {
+            if(document.getElementById("username").value == "user"
+               && document.getElementById("password").value == "pass" )
+            {
+                location.href="courses.html";
+            }
+            else
+            {
+                alert( "Username and/or Password are incorrect. Please enter in a valid Username and Password." );
+                location.href="index.html";
+            }
+        }
+    </script>
+    
     <div class="header">
       <!-- ADIDALMS logo at top left -->
       <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
@@ -19,14 +36,14 @@
           <ul>
             <li>
               <label for="usermail">Username</label>
-   			 	    <input type="text" name="username" placeholder="username" required>
+   			 	    <input type="text" id="username" placeholder="username" required>
             </li>
             <li>
               <label for="password">Password</label>
-              <input type="password" name="password" placeholder="password" required>
+              <input type="password" id="password" placeholder="password" required>
             </li>
             <li>
-              <input class="loginButtonIndex" type="submit" value="Login">
+              <input class="loginButtonIndex" type="button" value="Login"  onclick="validate();" >
             </li>
           </ul>
 		    </form>
