--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       <!-- ADIDALMS logo at top left -->
       <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
     </div>
-    
-  	<div id="loginFormIndex">
+    <!-- Setting up the Username and Password -->
+    <div id="loginFormIndex">
       <section>
-		    <form name="login" action="courses.html" method="get" accept-charset="utf-8">
+	<form name="login" action="courses.html" method="get" accept-charset="utf-8">
           <ul>
             <li>
               <label for="usermail">Username</label>
-   			 	    <input type="text" id="username" placeholder="username" required>
+   	      <input type="text" id="username" placeholder="username" required>
             </li>
             <li>
               <label for="password">Password</label>
@@ -46,7 +46,7 @@
               <input class="loginButtonIndex" type="button" value="Login"  onclick="validate();" >
             </li>
           </ul>
-		    </form>
+	</form>
       </section>
     </div>
   </body>
