--- a/index.html
+++ b/index.html
@@ -8,28 +8,44 @@
   </head>
 
   <body>
+    <!-- scripting for username and password validation -->
+    <script type="text/javascript">
+      function validate()
+        {
+          if(document.getElementById("username").value == "user" && document.getElementById("password").value == "pass" )
+          {
+            location.href="courses.html"; 
+          }
+          else
+          {
+             alert( "Username and/or Password are incorrect. Please enter in a valid Username and Password." );
+             location.href="index.html";
+          }
+        }
+    </script>
+    
     <div class="header">
       <!-- ADIDALMS logo at top left -->
       <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
     </div>
-    
-  	<div id="loginFormIndex">
+    <!-- Setting up the Username and Password -->
+    <div id="loginFormIndex">
       <section>
-		    <form name="login" action="courses.html" method="get" accept-charset="utf-8">
+	<form name="login" action="courses.html" method="get" accept-charset="utf-8">
           <ul>
             <li>
               <label for="usermail">Username</label>
-   			 	    <input type="text" name="username" placeholder="username" required>
+   	      <input type="text" id="username" placeholder="username" required>
             </li>
             <li>
               <label for="password">Password</label>
-              <input type="password" name="password" placeholder="password" required>
+              <input type="password" id="password" placeholder="password" required>
             </li>
             <li>
-              <input class="loginButtonIndex" type="submit" value="Login">
+              <input class="loginButtonIndex" type="button" value="Login"  onclick="validate();" >
             </li>
           </ul>
-		    </form>
+	</form>
       </section>
     </div>
   </body>
