--- a/courses.html
+++ b/courses.html
@@ -8,18 +8,15 @@
 
     <body>
         <div class="header">
-            <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
-            <form class="profileFormCourses" name="signIn" action="index.html" method="get" accept-charset="utf-8">
-                <input class="profileButtonCourses" type="submit" value="Profile">
-            </form>
+            <img class="logo" src="logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
         </div>
     
         <ul>
-            <li><a class="classLinksCourses" href="class1.html">Software Engineering</a></li>
-            <li>Class 2</li>
-            <li>Class 3</li>
-            <li>Class 4</li>
-            <li>Class 5</li>
+            <li class="classList">Intro to Software Engineering</li>
+            <li class="classList">Accounting Principles II</li>
+            <li class="classList">Computer Network Fundamentals</li>
+            <li class="classList">Database Programming</li>
+            <li class="classList">Humanities World Literature</li>
         </ul>
     </body>
 </html>
