--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <script type="text/javascript">
       function validate()
         {
-          if(document.getElementById("username").value == "user" && document.getElementById("password").value == "pass" )
+          if(document.getElementById("username").value == "user" && document.getElementById("password").value == "pass")
           {
             location.href="courses.html"; 
           }
           else
           {
-             alert( "Username and/or Password are incorrect. Please enter in a valid Username and Password." );
+             alert( "Username and/or Password are incorrect. Please enter in a valid Username and Password.");
              location.href="index.html";
           }
         }
@@ -26,12 +26,12 @@
     
     <div class="header">
       <!-- ADIDALMS logo at top left -->
-      <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+      <img class="logo" src="logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
     </div>
     <!-- Setting up the Username and Password -->
     <div id="loginFormIndex">
       <section>
-	<form name="login" action="courses.html" method="get" accept-charset="utf-8">
+        <form name="login" action="courses.html" method="get" accept-charset="utf-8">
           <ul>
             <li>
               <label for="usermail">Username</label>
@@ -45,7 +45,7 @@
               <input class="loginButtonIndex" type="button" value="Login"  onclick="validate();" >
             </li>
           </ul>
-	</form>
+        </form>
       </section>
     </div>
   </body>
