--- a/courses.html
+++ b/courses.html
@@ -1,3 +1,17 @@
+<!--/******************************************************************************
+* Copyright 2018 Nicole Ignasiak, Gabe Brown, Devin Simoneaux * 
+* Licensed under the Apache License, Version 2.0 (the "License"); * 
+* you may not use this file except in compliance with the License. * 
+* You may obtain a copy of the License at *
+* http://www.apache.org/licenses/LICENSE-2.0 *
+* Unless required by applicable law or agreed to in writing, software * 
+* distributed under the License is distributed on an "AS IS" BASIS, * 
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.* 
+* See the License for the specific language governing permissions and * 
+* limitations under the License. * 
+************************************************************************************/-->
+
+
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
@@ -8,18 +22,17 @@
 
     <body>
         <div class="header">
-            <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
-            <form class="profileFormCourses" name="signIn" action="index.html" method="get" accept-charset="utf-8">
-                <input class="profileButtonCourses" type="submit" value="Profile">
-            </form>
+            <!-- ADIDALMS logo at top left -->
+            <img class="logo" src="logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
         </div>
-    
+        
+        <!-- List of class names-->
         <ul>
-            <li><a class="classLinksCourses" href="class1.html">Software Engineering</a></li>
-            <li>Class 2</li>
-            <li>Class 3</li>
-            <li>Class 4</li>
-            <li>Class 5</li>
+            <li class="classList">Intro to Software Engineering</li>
+            <li class="classList">Accounting Principles II</li>
+            <li class="classList">Computer Network Fundamentals</li>
+            <li class="classList">Database Programming</li>
+            <li class="classList">Humanities World Literature</li>
         </ul>
     </body>
 </html>
