--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!--/******************************************************************************
+* Copyright 2018 Nicole Ignasiak, Gabe Brown, Devin Simoneaux * 
+* Licensed under the Apache License, Version 2.0 (the "License"); * 
+* you may not use this file except in compliance with the License. * 
+* You may obtain a copy of the License at *
+* http://www.apache.org/licenses/LICENSE-2.0 *
+* Unless required by applicable law or agreed to in writing, software * 
+* distributed under the License is distributed on an "AS IS" BASIS, * 
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.* 
+* See the License for the specific language governing permissions and * 
+* limitations under the License. * 
+************************************************************************************/-->
+
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -8,29 +22,43 @@
   </head>
 
   <body>
+    <!-- Scripting for username and password validation -->
+    <script>
+      function validate()
+        {
+          if(document.getElementById("username").value == "user" && document.getElementById("password").value == "pass")
+          {
+            location.href="courses.html"; 
+          }
+          else
+          {
+             alert( "Username and/or Password are incorrect. Please enter in a valid Username and Password.");
+             location.href="index.html";
+          }
+        }
+    </script>
+    
     <div class="header">
       <!-- ADIDALMS logo at top left -->
-      <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+      <img class="logo" src="logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
     </div>
-    
-  	<div id="loginFormIndex">
-      <section>
-		    <form name="login" action="courses.html" method="get" accept-charset="utf-8">
-          <ul>
-            <li>
-              <label for="usermail">Username</label>
-   			 	    <input type="text" name="username" placeholder="username" required>
-            </li>
-            <li>
-              <label for="password">Password</label>
-              <input type="password" name="password" placeholder="password" required>
-            </li>
-            <li>
-              <input class="loginButtonIndex" type="submit" value="Login">
-            </li>
-          </ul>
-		    </form>
-      </section>
+    <!-- Setting up the Username and Password locations-->
+    <div id="loginFormIndex">
+      <form name="login" action="courses.html" method="get" accept-charset="utf-8">
+        <ul>
+          <li>
+            <label for="username">Username</label>
+            <input type="text" id="username" placeholder="username" required>
+          </li>
+          <li>
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="password" required>
+          </li>
+          <li>
+            <input class="loginButtonIndex" type="button" value="Login"  onclick="validate();" >
+          </li>
+        </ul>
+      </form>
     </div>
   </body>
 </html>
