prof and student split

--- a/PROFESSOR/index.html
+++ b/PROFESSOR/index.html
@@ -26,9 +26,9 @@
     <script>
       function validate()
         {
-          if(document.getElementById("username").value == "user" && document.getElementById("password").value == "pass")
+          if(document.getElementById("username").value == "prof" && document.getElementById("password").value == "pass")
           {
-            location.href="courses.html"; 
+            location.href="coursesHomepage.html"; 
           }
           else
           {
@@ -42,6 +42,7 @@
       <!-- ADIDALMS logo at top left -->
       <img class="logo" src="logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
     </div>
+
     <!-- Setting up the Username and Password locations-->
     <div id="loginFormIndex">
       <form name="login" action="courses.html" method="get" accept-charset="utf-8">
