--- a/PROFESSOR/coursesHomepage.html
+++ b/PROFESSOR/coursesHomepage.html
@@ -23,16 +23,17 @@
     <body>
         <div class="header">
             <!-- ADIDALMS logo at top left -->
-            <img class="logo" src="logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+            <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+            <form class="profileFormCourses" name="signIn" action="index.html" method="get" accept-charset="utf-8">
+                <input class="profileButtonCourses" type="submit" value="Profile">
+            </form>
         </div>
         
         <!-- List of class names-->
         <ul>
-            <li class="classList">Intro to Software Engineering</li>
-            <li class="classList">Accounting Principles II</li>
-            <li class="classList">Computer Network Fundamentals</li>
-            <li class="classList">Database Programming</li>
-            <li class="classList">Humanities World Literature</li>
+            <li><a class="classLinksCourses" href="classes/softwareHomepage.html">Intro to Software Engineering</li>
+            <li><a class="classLinksCourses" href="classes/networkHomepage.html">Computer Network Fundamentals</li>
+            <li><a class="classLinksCourses" href="classes/databaseHomepage.html">Database Programming</li>
         </ul>
     </body>
 </html>
