--- a/PROFESSOR/classes/tools/softwareSyllabus.html
+++ b/PROFESSOR/classes/tools/softwareSyllabus.html
@@ -16,12 +16,31 @@
     <head>
         <meta charset="utf-8">
         <title>Courses</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../../style.css">
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
+        <script type="text/javascript">
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#blah')
+                    .attr('src', e.target.result)
+                    .width()
+                    .height();
+            };
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+        </script>
+
     </head>
 
     <body>
         <div class="header">
-            <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+            <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
             <form class="syllabusFormCourses" name="syllabus" action="tools/syllabus/class1Syllabus.html" method="get" accept-charset="utf-8">
                 <input class="syllabusLinkMany" type="submit" value="Syllabus">
@@ -39,6 +58,11 @@
 
 
 
+        </div>
+        <div>
+            <input type='file' onchange="readURL(this);" />
+
+            <img id="blah" src="#" alt="your image" />
         </div>
     
     </body>
