--- a/STUDENT/classes/tools/softwareSyllabus.html
+++ b/STUDENT/classes/tools/softwareSyllabus.html
@@ -16,12 +16,12 @@
     <head>
         <meta charset="utf-8">
         <title>Courses</title>
-        <link rel="stylesheet" type="text/css" href="../../style.css">
+        <link rel="stylesheet" type="text/css" href="../../../style.css">
     </head>
 
     <body>
         <div class="header">
-            <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+            <img class="logo" src="../../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
             <form class="syllabusFormCourses" name="syllabus" action="tools/syllabus/class1Syllabus.html" method="get" accept-charset="utf-8">
                 <input class="syllabusLinkMany" type="submit" value="Syllabus">
