--- a/STUDENT/coursesHomepage.html
+++ b/STUDENT/coursesHomepage.html
@@ -17,13 +17,13 @@
     <head>
         <meta charset="utf-8">
         <title>Courses</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../style.css">
     </head>
 
     <body>
         <div class="header">
             <!-- ADIDALMS logo at top left -->
-            <img class="logo" src="logooo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+            <img class="logo" src="../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
             <form class="profileFormCourses" name="signIn" action="index.html" method="get" accept-charset="utf-8">
                 <input class="profileButtonCourses" type="submit" value="Profile">
             </form>
