--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
         {
           if(document.getElementById("username").value == "user" && document.getElementById("password").value == "pass")
           {
-            location.href="coursesHomepage.html"; 
+            location.href="student/coursesHomepage.html"; 
+          }
+          else if
+          (document.getElementById("username").value == "prof" && document.getElementById("password").value == "pass")
+          {
+            location.href="professor/coursesHomepage.html"; 
           }
           else
           {
