--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
     <script>
       function validate()
         {
-          if(document.getElementById("username").value == "user" && document.getElementById("password").value == "pass")
+          if(document.getElementById("username").value == "student" && document.getElementById("password").value == "pass")
           {
-            location.href="coursesHomepage.html"; 
+            location.href="student/coursesHomepage.html"; 
+          }
+          else if
+          (document.getElementById("username").value == "professor" && document.getElementById("password").value == "pass")
+          {
+            location.href="professor/coursesHomepage.html"; 
           }
           else
           {
