--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--/******************************************************************************
-* Copyright 2018 Nicole Ignasiak, Gabe Brown, Devin Simoneaux * 
+* CCopyright 2018 Nicole Ignasiak, Gabe Brown, Devin Simoneaux * 
 * Licensed under the Apache License, Version 2.0 (the "License"); * 
 * you may not use this file except in compliance with the License. * 
 * You may obtain a copy of the License at *
