--- a/STUDENT/coursesHomepage.html
+++ b/STUDENT/coursesHomepage.html
@@ -25,7 +25,7 @@
             <!-- ADIDALMS logo at top left -->
             <img class="logo" src="../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
             <form class="profileFormCourses" name="signIn" action="index.html" method="get" accept-charset="utf-8">
-                <input class="profileButtonCourses" type="submit" value="Profile">
+                <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
         </div>
         
