--- a/PROFESSOR/coursesHomepage.html
+++ b/PROFESSOR/coursesHomepage.html
@@ -24,7 +24,7 @@
         <div class="header">
             <!-- ADIDALMS logo at top left -->
             <img class="logo" src="../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
-            <form class="profileFormCourses" name="signIn" action="index.html" method="get" accept-charset="utf-8">
+            <form class="logoutFormCourses" name="signOut" action="index.html" method="get" accept-charset="utf-8">
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
         </div>
