--- a/STUDENT/classes/tools/softwareSyllabus.html
+++ b/STUDENT/classes/tools/softwareSyllabus.html
@@ -31,6 +31,8 @@
                 <input class="profileButtonCourses" type="submit" value="Profile">
             </form>
         </div>
+        
+        Click <a href="/CIS320-SP2018.docx"> here </a> to download the syllabus.
 
     
     </body>
