--- a/STUDENT/classes/tools/softwareSyllabus.html
+++ b/STUDENT/classes/tools/softwareSyllabus.html
@@ -32,7 +32,7 @@
             </form>
         </div>
         
-        Click <a href="/CIS320-SP2018.docx"> here </a> to download the syllabus.
+        Click <a href="CIS320-SP2018.docx"> here </a> to download the syllabus.
 
     
     </body>
