--- a/STUDENT/classes/softwareHomepage.html
+++ b/STUDENT/classes/softwareHomepage.html
@@ -28,8 +28,8 @@
                 <input class="syllabusLinkMany" type="submit" value="Syllabus">
             </form>
 
-            <form class="profileFormCourses" name="signIn" action="index.html" method="get" accept-charset="utf-8">
-                <input class="profileButtonCourses" type="submit" value="Profile">
+            <form class="logoutFormCourses" name="signOut" action="index.html" method="get" accept-charset="utf-8">
+                <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
         </div>
     
