--- a/STUDENT/classes/tools/softwareSyllabus.html
+++ b/STUDENT/classes/tools/softwareSyllabus.html
@@ -27,7 +27,7 @@
                 <input class="syllabusLinkMany" type="submit" value="Syllabus">
             </form>
 
-            <form class="logoutFormCourses" name="signOut" action="index.html" method="get" accept-charset="utf-8">
+            <form class="logoutFormCourses" name="signOut" action="../../../index.html" method="get" accept-charset="utf-8">
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
         </div>
