--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <form name="login" action="courses.html" method="get" accept-charset="utf-8">
         <ul>
           <li>
-            <label for="username">Username</label>
+            <label for="username">CHANGE2Username</label>
             <input type="text" id="username" placeholder="username" required>
           </li>
           <li>
