--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
 
     <!-- Setting up the Username and Password locations-->
     <div id="loginFormIndex">
+      <span id="bottomPad">Type your user name and password.</span>
       <form name="login" action="courses.html" method="get" accept-charset="utf-8">
         <ul>
           <li>
-            <label for="username">Username</label>
+            <label for="username">User name:</label>
             <input type="text" id="username" placeholder="username" required>
           </li>
           <li>
-            <label for="password">Password</label>
+            <label for="password">Password:</label>
             <input type="password" id="password" placeholder="password" required>
           </li>
           <li>
