--- a/PROFESSOR/classes/tools/softwareSyllabus.html
+++ b/PROFESSOR/classes/tools/softwareSyllabus.html
@@ -17,24 +17,7 @@
         <meta charset="utf-8">
         <title>Courses</title>
         <link rel="stylesheet" type="text/css" href="../../../style.css">
-<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
-        <script type="text/javascript">
-    function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
 
-            reader.onload = function (e) {
-                $('#blah')
-                    .attr('src', e.target.result)
-                    .width()
-                    .height();
-            };
-
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
-        </script>
 
     </head>
 
@@ -55,15 +38,12 @@
              <form class="profileFormCourses" name="signIn" action="index.html" method="get" accept-charset="utf-8">
                 <input class="profileButtonCourses" type="submit" value="Upload Syllabus">
             </form>
-
-
-
         </div>
+
         <div>
-            <input type='file' onchange="readURL(this);" />
-
-            <img id="blah" src="#" alt="your image" />
+            <form enctype="multipart/form-data" action="/upload/image" method="post">
+            <input id="image-file" type="file" />
+            </form>
         </div>
-    
     </body>
 </html>
