--- a/STUDENT/classes/databaseHomepage.html
+++ b/STUDENT/classes/databaseHomepage.html
@@ -24,7 +24,7 @@
         <div class="header">
             <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
-            <form class="syllabusFormCourses" name="syllabus" action="tools/softwareSyllabus.html" method="get" accept-charset="utf-8">
+            <form class="syllabusFormCourses" name="syllabus" action="tools/databaseSyllabus.docx" method="get" accept-charset="utf-8">
                 <input class="syllabusLinkMany" type="submit" value="Syllabus">
             </form>
 
