Fixing the syllabus stuff

--- a/STUDENT/classes/tools/networkSyllabus.html
+++ b/STUDENT/classes/tools/networkSyllabus.html
@@ -11,26 +11,27 @@
 * limitations under the License. * 
 ************************************************************************************/-->
 
-
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
         <title>Courses</title>
-        <link rel="stylesheet" type="text/css" href="../../style.css">
+        <link rel="stylesheet" type="text/css" href="../../../style.css">
     </head>
 
     <body>
         <div class="header">
-            <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+            <img class="logo" src="../../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
-            <form class="syllabusFormCourses" name="syllabus" action="tools/literatureSyllabus.html" method="get" accept-charset="utf-8">
+            <form class="syllabusFormCourses" name="syllabus" action="tools/syllabus/class1Syllabus.html" method="get" accept-charset="utf-8">
                 <input class="syllabusLinkMany" type="submit" value="Syllabus">
             </form>
 
-            <form class="logoutFormCourses" name="signOut" action="../../index.html" method="get" accept-charset="utf-8">
+            <form class="logoutFormCourses" name="signOut" action="../../../index.html" method="get" accept-charset="utf-8">
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
         </div>
+        
+        Click <a href="networkSyllabus.pdf"> here </a> to download the syllabus.
     </body>
 </html>
