Syllabus stuff completed

--- a/STUDENT/classes/tools/networkSyllabus.html
+++ b/STUDENT/classes/tools/networkSyllabus.html
@@ -32,6 +32,6 @@
             </form>
         </div>
         
-        Click <a href="networkSyllabus.pdf"> here </a> to download the syllabus.
+        Click <a href="networkSyllabus.pdf" download> here </a> to download the syllabus.
     </body>
 </html>
