Syllabus Complete. - Gabe

--- a/STUDENT/classes/tools/accountingSyllabus.html
+++ b/STUDENT/classes/tools/accountingSyllabus.html
@@ -32,6 +32,6 @@
             </form>
         </div>
         
-        Click <a href="CIS320-SP2018.docx"> here </a> to download the syllabus.
+        Click <a href="accountingSyllabus.pdf" download> here </a> to download the syllabus.
     </body>
 </html>
