--- a/STUDENT/classes/tools/databaseSyllabus.html
+++ b/STUDENT/classes/tools/databaseSyllabus.html
@@ -32,6 +32,6 @@
             </form>
         </div>
         
-        Click <a href="CIS320-SP2018.docx" download> here </a> to download the syllabus.
+        Click <a href="databaseSyllabus.pdf" download> here </a> to download the syllabus.
     </body>
 </html>
