--- a/PROFESSOR/classes/networkHomepage.html
+++ b/PROFESSOR/classes/networkHomepage.html
@@ -31,6 +31,8 @@
             <form class="logoutFormCourses" name="signOut" action="../../index.html" method="get" accept-charset="utf-8">
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
+
+            <p>Network Homepage</p>
         </div>
     </body>
 </html>
