--- a/PROFESSOR/classes/tools/softwareSyllabus.html
+++ b/PROFESSOR/classes/tools/softwareSyllabus.html
@@ -32,6 +32,8 @@
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
         </div>
+
+        <p>Software Syllabus</p>
         <div>
 
 <input id="upload" type="file" />
