--- a/STUDENT/classes/networkHomepage.html
+++ b/STUDENT/classes/networkHomepage.html
@@ -32,5 +32,7 @@
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
         </div>
+
+        <p>Network Homepage</p>
     </body>
 </html>
