--- a/STUDENT/classes/tools/accountingSyllabus.html
+++ b/STUDENT/classes/tools/accountingSyllabus.html
@@ -30,6 +30,8 @@
             <form class="logoutFormCourses" name="signOut" action="../../../index.html" method="get" accept-charset="utf-8">
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
+
+            <p>Accouting Syllabus</p>
         </div>
         
         Click <a href="accountingSyllabus.pdf" download> here </a> to download the syllabus.
