--- a/professor/classes/tools/networkingSyllabus.html
+++ b/professor/classes/tools/networkingSyllabus.html
@@ -32,6 +32,8 @@
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
         </div>
+
+        <p>Network Syllabus</p>
         <div>
 
 <input id="upload" type="file" />
