--- a/PROFESSOR/coursesHomepage.html
+++ b/PROFESSOR/coursesHomepage.html
@@ -24,9 +24,12 @@
         <div class="header">
             <!-- ADIDALMS logo at top left -->
             <img class="logo" src="../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+
             <form class="logoutFormCourses" name="signOut" action="../index.html" method="get" accept-charset="utf-8">
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
+            
+            <h1>Indiana Wesleyan University</h1>
         </div>
         
         <!-- List of class names-->
