--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div class="header">
       <!-- ADIDALMS logo at top left -->
       <img class="logo" src="logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+      <h1>Indiana Wesleyan University</h1>
     </div>
 
     <!-- Setting up the Username and Password locations-->
