--- a/index.html
+++ b/index.html
@@ -24,21 +24,34 @@
   <body>
     <!-- Scripting for username and password validation -->
     <script>
+      
       function validate()
         {
+          var student = false;
+          var professor = false;
           if(document.getElementById("username").value == "student" && document.getElementById("password").value == "pass")
           {
-            location.href="student/coursesHomepage.html"; 
+            student = true; 
           }
           else if
           (document.getElementById("username").value == "professor" && document.getElementById("password").value == "pass")
           {
-            location.href="professor/coursesHomepage.html"; 
+            professor = true; 
           }
-          else
+          
+          if(student==true)
           {
-             alert( "Username and/or Password are incorrect. Please enter in a valid Username and Password.");
-             location.href="index.html";
+            location.href="student/coursesHomepage.html";
+          } 
+          else if
+            (professor==true)
+          {
+            location.href="professor/coursesHomepage.html";
+          }
+          else 
+          {
+            alert( "Username and/or Password are incorrect. Please enter in a valid Username and Password.");
+            location.href="index.html";
           }
         }
     </script>
