--- a/index.html
+++ b/index.html
@@ -27,18 +27,29 @@
       
       function validate()
         {
+          var student = false;
+          var professor = false;
           if(document.getElementById("username").value == "student" && document.getElementById("password").value == "pass")
           {
-            location.href="student/coursesHomepage.html";
+            student = true;
           }
           else if
           (document.getElementById("username").value == "professor" && document.getElementById("password").value == "pass")
           {
+            professor = true;
+          }
+          
+          if(student==true)
+          {
+            location.href="student/coursesHomepage.html";
+          }
+          else if(professor==true)
+          {
             location.href="professor/coursesHomepage.html";
           }
-          else
+          else 
           {
-          	alert( "Username and/or Password are incorrect. Please enter in a valid Username and Password.");
+            alert( "Username and/or Password are incorrect. Please enter in a valid Username and Password.");
             location.href="index.html";
           }
         }
