--- a/PROFESSOR/coursesHomepage.html
+++ b/PROFESSOR/coursesHomepage.html
@@ -21,6 +21,7 @@
     </head>
 
     <body>
+        <div>
         <div class="header">
             <!-- ADIDALMS logo at top left -->
             <img class="logo" src="../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
@@ -28,15 +29,18 @@
             <form class="logoutFormCourses" name="signOut" action="../index.html" method="get" accept-charset="utf-8">
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
-            
+
             <h1>Indiana Wesleyan University</h1>
         </div>
         
         <!-- List of class names-->
+        <div class="coursesList">
         <ul>
-            <li><a class="classLinksCourses" href="classes/softwareHomepage.html">Intro to Software Engineering</li>
-            <li><a class="classLinksCourses" href="classes/networkHomepage.html">Computer Network Fundamentals</li>
-            <li><a class="classLinksCourses" href="classes/databaseHomepage.html">Database Programming</li>
+            <li><a class="classLinksCourses" href="classes/softwareHomepage.html"/>Intro to Software Engineering</li>
+            <li><a class="classLinksCourses" href="classes/networkHomepage.html"/>Computer Network Fundamentals</li>
+            <li><a class="classLinksCourses" href="classes/databaseHomepage.html"/>Database Programming</li>
         </ul>
+        </div>
+    </div>
     </body>
 </html>
