--- a/PROFESSOR/coursesHomepage.html
+++ b/PROFESSOR/coursesHomepage.html
@@ -21,7 +21,7 @@
     </head>
 
     <body>
-        <div>
+        <div class="header-wrapper">
         <div class="header">
             <!-- ADIDALMS logo at top left -->
             <img class="logo" src="../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
@@ -30,17 +30,22 @@
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
 
+            <input class="studentName" type="submit" value="Professor 1"></input>
+
             <h1>Indiana Wesleyan University</h1>
         </div>
-        
+        </div>
+        <hr>
+
         <!-- List of class names-->
         <div class="coursesList">
+            <h1>Professor's Course List</h1>
         <ul>
             <li><a class="classLinksCourses" href="classes/softwareHomepage.html"/>Intro to Software Engineering</li>
             <li><a class="classLinksCourses" href="classes/networkHomepage.html"/>Computer Network Fundamentals</li>
             <li><a class="classLinksCourses" href="classes/databaseHomepage.html"/>Database Programming</li>
         </ul>
         </div>
-    </div>
+
     </body>
 </html>
