--- a/PROFESSOR/classes/softwareHomepage.html
+++ b/PROFESSOR/classes/softwareHomepage.html
@@ -20,18 +20,66 @@
     </head>
 
     <body>
-        <div class="header">
+         <script>
+            var btn = document.querySelector('input');
+var txt = document.querySelector('p');
+
+btn.addEventListener('click', updateBtn);
+
+function updateBtn() {
+  if (btn.value === 'Start machine') {
+    btn.value = 'Stop machine';
+    txt.textContent = 'The machine has started!';
+  } else {
+    btn.value = 'Start machine';
+    txt.textContent = 'The machine is stopped.';
+  }
+}
+</script>
+        
+        <div class="header-wrapper">
+        <div class="headerClass">
+            <!-- ADIDALMS logo at top left -->
             <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
-            <form class="syllabusFormCourses" name="syllabus" action="tools/softwareSyllabus.html" method="get" accept-charset="utf-8">
-                <input class="syllabusLinkMany" type="submit" value="Syllabus">
-            </form>
-
-            <form class="logoutFormCourses" name="signOut" action="../../index.html" method="get" accept-charset="utf-8">
+            <form class="logoutFormCourses" name="signOut" action="../index.html" method="get" accept-charset="utf-8">
                 <input class="logoutButtonCourses" type="submit" value="Logout">
             </form>
-            
-            <p>Software Homepage</p>
-        </div>    
+
+            <input class="studentName" type="submit" value="Professor 1"></input>
+
+            <h1>Indiana Wesleyan University</h1>
+            <h2>Intro to Software Engineering</h2>
+        </div>
+        </div> 
+
+        <div>
+        <form class="syllabusFormCourses" name="syllabus" action="tools/softwareSyllabus.html" method="get" accept-charset="utf-8">
+                <input class="syllabus" type="submit" value="Syllabus">
+        </form> 
+        </div> 
+
+
+
+        <div>
+        <div class="addUpdate">
+            <p>Course Updates</p>
+            <hr>
+
+            <form class="addUpdate" name="addUpdate" action="submit" method="get" accept-charset="utf-8">
+                <input class="addUpdateButton" type="submit" value="Add update">
+            </form>
+        </div>
+
+        <div class="submitUpdate">
+            <form action="/action_page.php" method="post">
+                <p>New update:</p>
+                <hr>
+                <br>
+                <input type="text" name="update" style="margin-left: 10px; height: 75px; width: 250px"> 
+                <input type="submit" value="Submit" style="position: absolute; bottom: 8px;right: 8px;">
+            </form>
+        </div>
+    </div>
     </body>
 </html>
