--- a/PROFESSOR/classes/softwareHomepage.html
+++ b/PROFESSOR/classes/softwareHomepage.html
@@ -36,6 +36,17 @@ function updateBtn() {
   }
 }
 </script>
+
+<script language="javascript">
+
+  function DisableBackButton()
+    {
+      history.forward();
+    }
+</script>
+
+<script language="javascript">DisableBackButton();</script>
+
         
         <div class="header-wrapper">
         <div class="headerClass">
