--- a/PROFESSOR/classes/softwareHomepage.html
+++ b/PROFESSOR/classes/softwareHomepage.html
@@ -50,7 +50,7 @@ function updateBtn() {
             <!-- ADIDALMS logo at top left -->
             <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
-            <form class="logoutFormCourses" name="signOut" action="../index.html" method="get" accept-charset="utf-8">
+            <form class="logoutFormCourses" name="signOut" action="../../index.html" method="get" accept-charset="utf-8">
                 <input class="logoutButtonCourses" type="submit" value="Logout">
                 <script language="javascript">DisableBackButton();</script>
             </form>
