--- a/PROFESSOR/classes/softwareHomepage.html
+++ b/PROFESSOR/classes/softwareHomepage.html
@@ -26,7 +26,7 @@
 
             function showAddUpdate() {
                 var x = document.getElementById("submitUpdate");
-                x.style.display="block";            
+                x.style.display="visible";
             }
 
             function hideAddUpdate() {
