--- a/PROFESSOR/classes/softwareHomepage.html
+++ b/PROFESSOR/classes/softwareHomepage.html
@@ -21,19 +21,6 @@
 
     <body>
 
-         <script>
-
-
-            function showAddUpdate() {
-                var x = document.getElementById("submitUpdate");
-                x.style.display="visible";
-            }
-
-            function hideAddUpdate() {
-                var x = document.getElementById("submitUpdate");
-                x.style.display="none"; 
-            }
-</script>
 
 <script language="javascript">
 
@@ -78,23 +65,32 @@
 
                 <div id="update"></div>
 
-                <form class="addUpdates" name="addUpdate" action="submit" method="get" accept-charset="utf-8" onclick="showAddUpdate()">
-                    <input class="addUpdateButton" type="submit" value="Add update" onclick="showAddUpdate()">
-                </form>
+                <button type="button" class="addUpdateButton" id="addUpdateButton" onclick="show()">Add Update</button>
             </div>
 
 
+            <div class="submitUpdate" style="display: none" id="submitUpdate">
 
-            <div class="submitUpdate">
-                <form action="/action_page.php" method="post">
                     <p>New update:</p>
                     <hr>
                     <br>
-                
+        
                     <input id="profUpdate" type="text" name="update" style="margin-left: 10px; height: 60px; width: 270px"> 
-                    <input class="addUpdateButton" type="submit" value="Submit" style="position: absolute; bottom: 8px;right: 8px;" onclick="hideAddUpdate()">
-                </form>
+                    <input class="addUpdateButton" type="submit" value="Submit" style="position: absolute; bottom: 8px;right: 8px;" onclick="hide()">
             </div>
         </div>
+
+        <script language="javascript">
+
+            function show() {
+                document.getElementById('submitUpdate').style.display = "block";
+            }
+
+            function hide() {
+                document.getElementById('submitUpdate').style.display = "none";
+                var update = document.getElementById('profUpdate');
+                document.getElementById('update').innerHTML = update;
+            }
+        </script>
     </body>
 </html>
