--- a/STUDENT/classes/literatureHomepage.html
+++ b/STUDENT/classes/literatureHomepage.html
@@ -33,7 +33,7 @@
         <div class="header">
             <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
-            <form class="syllabusFormCourses" name="syllabus" action="tools/literatureSyllabus.html" method="get" accept-charset="utf-8">
+            <form class="syllabusFormCourses" name="syllabus" action="tools/literatureSyllabus.pdf" method="get" accept-charset="utf-8">
                 <input class="syllabusLinkMany" type="submit" value="Syllabus">
             </form>
 
